--- a/vignettes/WalkThroughBinaryVignetteWynn.Rmd
+++ b/vignettes/WalkThroughBinaryVignetteWynn.Rmd
@@ -58,4 +58,18 @@ In many cases, it is helpful to scale the raw RER to account for the variance ac
 mamRERs=scale(mamRER)
 ```
 
+We can visualize the RERs for any given gene using the X function. Here is an example.
+
+```{r, message = FALSE, cache = TRUE}
+#insert R code here
+#To do: re-name trees
+par(mfrow=c(1,3))
+plot(mamTrees$masterTree) #plot average tree
+#plot individual gene tree
+#plot RERs
+```
+
+The left plot is a tree with branch lengths representing the average rates across all genes. The middle plot is the same tree, but with branch lengths representing rates specifically for the X gene. On the right are the estimated RERs for terminal branches. Notice how the RER for X is negative; this is because the branch leading to X in the X tree is shorter than average. On the other hand, the RER for X is positive because the branch leading to X in the X tree is longer than average.
+
+
 # References
