--- a/vignettes/WalkThroughBinaryVignetteWynn.Rmd
+++ b/vignettes/WalkThroughBinaryVignetteWynn.Rmd
@@ -3,8 +3,8 @@ title: 'RERConverge: walk-through of binary trait analysis'
 author: "Wynn Meyer"
 date: "10/17/2017"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 bibliography: RERConverge.bib
 ---
 
@@ -16,7 +16,7 @@ This walk-through provides instructions for implementing the RERConverge package
 
 As an example, we will run the code in the `runMarineSub` script in the vignettes folder. 
 
-## Reading in gene trees
+## Reading in gene trees with `readTrees`
 
 To run RERconverge, you will first need to supply a file containing **gene trees** for all genes to be included in your analysis. This is a tab delimited file with the following information on each line:
 
@@ -46,11 +46,11 @@ First, the code tells us that the maximum number of tips in the gene trees is 62
 
 The figure here is a log-scale plot of the variance versus the mean for all possible branch lengths in the tree, summarized across all genes in the dataset. Where the relationship between mean and variance starts to break down for very small values (in this case very large negative values) can be an indicator of the point at which values are too close to zero to provide accurate information for analyses. In our example plot, this happens around $e^{-7}$. We use approximately this value as our cutoff to exclude short branches in further analyses.
 
-## Estimating relative evolutionary rates (RER)
+## Estimating relative evolutionary rates (RER) with `getAllResiduals`
 
 The next step is to estimate **relative evolutionary rates**, or RER, for all branches in the tree for each gene. Intuitively, a gene's RER for a given branch represents how quickly or slowly the gene is evolving on that branch, relative to its overall rate of evolution throughout the tree. For more details about how RER are computed, see [@Chikina2016] and [@Partha2017].
 
-We will use the `getAllResiduals` function to calculate RER. The input variable `useSpecies` is a vector that can be used to specify a subset of species to use in the analysis; here we will use the full set of tip labels in the master tree. We will also filter any branches shorter than 0.001 using `cutoff` (see above for estimating a reasonable cutoff from the mean-variance plot). Here is the basic method, with the recommended settings:
+We will use the `getAllResiduals` function to calculate RER. The input variable `useSpecies` is a vector that can be used to specify a subset of species to use in the analysis; here we will use the full set of tip labels in the master tree (this is also the default, if `useSpecies` is not set). We will also filter any branches shorter than 0.001 using `cutoff` (see above for estimating a reasonable cutoff from the mean-variance plot). Here is the basic method, with the recommended settings:
 ```{r, message = FALSE, cache = TRUE}
 mamRERlogW=getAllResiduals(mamTrees,useSpecies=mamTrees$masterTree$tip.label, 
                            transform = "log", weighted = T, cutoff=0.001)
@@ -58,7 +58,7 @@ mamRERlogW=getAllResiduals(mamTrees,useSpecies=mamTrees$masterTree$tip.label,
 
 While this is running, it will print out *i=N* for a series of numbers. This shows how many genes have had RER estimated.
 
-In many cases, it is helpful to scale the raw RER to account for the variance across genes within the genome. This is helpful in estimating the empirical significance of particular genes in downstream analyses. Here is the function to scale RER:
+In most cases, it is helpful to scale the raw RER on each branch to account for branches' different variances across genes within the genome. This is helpful in estimating the empirical significance of particular genes in downstream analyses. Here is the function to scale RER:
 ```{r, cache = TRUE}
 mamRERlogWs=scale(mamRERlogW)
 ```
@@ -128,7 +128,7 @@ phenvMarine=tree2Paths(marineb, mamTrees)
 phenvMarine2=foreground2Paths(marineextantforeground, mamTrees)
 ```
 
-## Correlating gene evolution with trait evolution using RERConverge
+## Correlating gene evolution with trait evolution using `getAllCor`
 Now that we have estimates for the RERs for all genes of interest, as well as a representation of how the trait of interest evolves across the tree, we can use RERConverge to test for an association between relative evolutionary rate and trait across all branches of the tree.
 
 ```{r, warning = FALSE, cache = TRUE}
@@ -160,7 +160,7 @@ In the ANO2 tree, the marine branches are long, leading to a positive Rho and a 
 
 To see what the overall pattern of association is across all genes in the set, we can plot a p-value histogram.
 ```{r fig4, fig.height=5, fig.width=10}
-hist(corMarineLogWs$P, breaks=20, xlab="Kendall P-value", 
+hist(corMarineLogWs$P, breaks=15, xlab="Kendall P-value", 
      main="P-values for correlation between 200 genes and marine environment")
 ```
 
