--- a/vignettes/WalkThroughBinaryVignetteWynn.Rmd
+++ b/vignettes/WalkThroughBinaryVignetteWynn.Rmd
@@ -16,15 +16,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This walk-through provides instructions for implementing the RERconverge package to identify genes whose evolutionary rates shift in association with change in a binary trait. For information on how to download and install RERconverge, see the README on [github](https://github.com/nclark-lab/RERconverge).
 
-## Reading in gene trees with `readTrees`
+## Installing and loading RERconverge
 
-To run RERconverge, you will first need to supply a file containing **gene trees** for all genes to be included in your analysis. This is a tab delimited file with the following information on each line:
-
-Gene_name Newick_tree
-
-An example file is provided in *data/mammal62aa_meredplus_wCM.trees*, which you can view in any text editor.
-
-In R, load the RERConverge library and read in the gene trees. The `readTrees` function takes quite a while to read in trees for all genes, so we will limit ourselves to the first 200 using `max.read` (this will still take a minute or so, so be patient):
+In R, load the RERConverge library. 
 
 ```{r results='hide', message = FALSE, warning = FALSE, cache = TRUE}
 if (!require("RERconverge", character.only=T, quietly=T)) {
@@ -33,48 +27,66 @@ if (!require("RERconverge", character.only=T, quietly=T)) {
 }
 library(RERconverge)
 ```
-```{r, cache = TRUE}
-mamTrees=readTrees("../data/mammal62aa_meredplus_wCM.trees", max.read = 200)
+
+This should also download all the files we will be working with to your computer, in the directory where your R library lives. If you'd like to visualize or work with any of these files separately, this is where you can find them:
+
+```{r, cache = T}
+print(paste(.libPaths()[1],"/RERconverge",sep="")) #This is the path to the files
+rerpath = paste(.libPaths()[1],"/RERconverge",sep="")
 ```
 
-First, the code tells us that the maximum number of tips in the gene trees is 62. It then reports that it will use the 32 genes in this set that have data for all 62 species to estimate a **master tree**. The tree topology for the master tree (but not its branch lengths) will be used for subsequent analyses.
+## Reading in gene trees with `readTrees`
 
-The figure here is a log-scale plot of the variance versus the mean for all possible branch lengths in the tree, summarized across all genes in the dataset. Where the relationship between mean and variance starts to break down for very small values (in this case very large negative values) can be an indicator of the point at which values are too close to zero to provide accurate information for analyses. In our example plot, this happens around $e^{-7}$. We use approximately this value as our cutoff to exclude short branches in further analyses.
+To run RERconverge, you will first need to supply a file containing **gene trees** for all genes to be included in your analysis. This is a tab delimited file with the following information on each line:
+
+Gene_name Newick_tree
+
+An example file is provided in *extdata/mammal62aa_meredplus_wCM.trees*, which you can view in any text editor.
+
+Now in R, read in the gene trees. The `readTrees` function takes quite a while to read in trees for all genes, so we will limit ourselves to the first 200 using `max.read` (this will still take a minute or so, so be patient):
+
+```{r, cache = TRUE}
+toytreefile = "mammal62aa_meredplus_wCM.trees" #change filename once toy trees available
+mamTrees=readTrees(paste(rerpath,"/extdata/",toytreefile,sep=""), max.read = 200)
+```
+
+First, the code tells us that there are 38298 items, or gene trees, in the file. Since we have set `max.read = 200`, it will only read the first 200 of these. Then it says that the maximum number of tips in the gene trees is 62 and, later, it reports that it will use the 32 genes in this set that have data for all 62 species to estimate a **master tree**. The tree topology for the master tree (but not its branch lengths) will be used for subsequent analyses.
 
 ## Estimating relative evolutionary rates (RER) with `getAllResiduals`
 
 The next step is to estimate **relative evolutionary rates**, or RER, for all branches in the tree for each gene. Intuitively, a gene's RER for a given branch represents how quickly or slowly the gene is evolving on that branch, relative to its overall rate of evolution throughout the tree. For more details about how RER are computed, see [@Chikina2016] and [@Partha2017].
 
-We will use the `getAllResiduals` function to calculate RER. This uses the following input variables:
+We will use the `getAllResiduals` function to calculate RER. This uses the following input variables (all the options set here are also the defaults):
 
-* `useSpecies`: a vector that can be used to specify a subset of species to use in the analysis. Here we will use the full set of tip labels in the master tree (this is also the default, if `useSpecies` is not set).
+* `useSpecies`: a vector that can be used to specify a subset of species to use in the analysis. Here we will use the full set of tip labels in the master tree.
 * `transform`: the method used to transform the raw data. By transforming the raw data, we reduce the heteroscedasticity (relationship between mean and variance) and the influence of outliers. Here we will use a square-root transform.
-* `weighted`: whether to use a weighted regression to estimate RER. Weighting allows further correction for the relationship between mean and variance, which can be directly estimated from the data. We recommend it and will use it here.
-* `cutoff`: minimum branch length for inclusion (see above for estimating a reasonable cutoff from the mean-variance plot). Here we will filter any branches shorter than 0.001.
+* `weighted`: whether to use a weighted regression to estimate RER. Weighting allows further correction for the relationship between mean and variance, which can be directly estimated from the data. 
+* `scale`: whether to scale the individual branches of the gene trees to account for variance across trees. This scales the variance, though not the mean, of each branch length, using the R function `scale`.
 
 Here is the basic method, with the recommended settings:
 
 ```{r, message = FALSE, cache = TRUE}
-mamRERv=getAllResiduals(mamTrees,useSpecies=mamTrees$masterTree$tip.label, 
-                           transform = "sqrt", weighted = T, cutoff=0.001)
+mamRERw=getAllResiduals(mamTrees,useSpecies=mamTrees$masterTree$tip.label, 
+                           transform = "sqrt", weighted = T, scale = T)
 ```
 
-While this is running, it will print out *i=N* for a series of numbers. This shows how many genes have had RER estimated.
+The plots generated by this function show the heteroscedasticity in the original data (on the left) and the data after transformation and weighted regression (on the right). The x-axis displays bins of branch lengths on the tree, and the y-axis is the (log-scaled) variance in these branch lengths across trees. As you can see by comparing the right plot to the left plot, transforming and performing a weighted regression reduces the relationship between the mean branch length (x-axis) and the variance in branch length (y-axis).
 
-We can visualize the RERs for any given gene using the `plotRers` function. Here is an example.
+Now that we have RERs, we can visualize these for any given gene using the `plotRers` function. Here is an example.
 
 ```{r fig1, fig.height=9,fig.width=10, warning = FALSE, cache = TRUE}
 #make average and gene tree plots
 noneutherians <- c("Platypus","Wallaby","Tasmanian_devil","Opossum")
 par(mfrow=c(1,2))
-#The following function is not in the compiled R package but is available in 'plottingFuncs.R' on 'UpdateVignette' branch....
-source('../R/plottingFuncs.R')
+#The following function is not in the compiled R package but is available in 'plottingFuncs.R' on the 'UpdateVignette' branch....
+repopath = '~/repos/RERconverge'
+source(paste(repopath,'/R/plottingFuncs.R',sep=''))
 avgtree=plotTreeHighlightBranches(mamTrees$masterTree, outgroup=noneutherians, hlspecies=c("Vole","Squirrel"), hlcols=c("blue","red"), main="Average tree") #plot average tree
 bend3tree=plotTreeHighlightBranches(mamTrees$trees$BEND3, outgroup=noneutherians, hlspecies=c("Vole","Squirrel"), hlcols=c("blue","red"), main="BEND3 tree") #plot individual gene tree
 #plot RERs
 par(mfrow=c(1,1))
 phenvExample <- foreground2Paths(c("Vole","Squirrel"),mamTrees)
-plotRers(mamRERv,"BEND3",phenv=phenvExample) #plot RERs
+plotRers(mamRERw,"BEND3",phenv=phenvExample) #plot RERs
 ```
 
 The upper left plot is a tree with branch lengths representing the average rates across all genes. The upper right plot is the same tree, but with branch lengths representing rates specifically for the BEND3 gene. The plot below these represents the estimated RERs for terminal branches. The foreground branches (set here using `foreground2Paths`) are highlighted in red. Notice how the RER for vole is negative; this is because the branch leading to vole in the BEND3 tree is shorter than average. On the other hand, the RER for squirrel is positive because the branch leading to squirrel in the BEND3 tree is longer than average.
